<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/scrollBottomButtons2"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background = "@color/bg_events"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode = "adjustResize"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout2"
        android:background="@color/btn_back_bg"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"  />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/btnLogout"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/lbl_welcome"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="cursive"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSearch"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:ems="10"
        android:hint="Event code"
        android:inputType="text" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/btn_login_bg"
            android:fontFamily="serif"
            android:text="@string/btn_search"
            android:textColor="@color/btn_login"
            android:textStyle="bold"
            android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtMyEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_events"
        android:textColor="@color/lbl_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_below="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
            android:id="@+id/btnCreate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtMyEvents"
            android:layout_marginTop="14dp"
            android:background="@color/btn_back_bg"
            android:fontFamily="serif"
            android:text="@string/create_event"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/scrollBottomButtons"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_height="170dp"></ScrollView>
    </LinearLayout>

</RelativeLayout>
    </ScrollView>